# FagMiles-2023

./: README.md
dotnet-classic/: FagMiles.sln  Program.cs
dotnet-classic/Controllers/: QuestionController.cs
dotnet-classic/Properties/: launchSettings.json
dotnet-minimal/: FagMiles.sln  Program.cs
dotnet-minimal/Properties/: launchSettings.json
node/: FagMiles.js  package-lock.json  package.json
python/: README.md  app.py
python-fast/: main.py  pyproject.toml  readme.md  requirements.txt
